chore: change http response code to unauthorized
